--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - The Cozy Fork</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/RestaurantApiMvc.styles.css" asp-append-version="true" />
+@*     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/RestaurantApiMvc.styles.css" asp-append-version="true" /> *@
 </head>
 <body>
     <header>
@@ -29,6 +29,10 @@
                             <a class="nav-link" asp-area="" asp-controller="Booking" asp-action="Index">Book a table</a>
                         </li>
                     </ul>
+                    <div class="navbar-nav">
+                        <a href="@Url.Action("Login", "Account")" class="btn btn-dark my-1" style="margin-right: 0.5rem">Sign In</a>
+                        <a href="@Url.Action("Register", "Account")" class="btn btn-outline-dark my-1">Sign Up</a>
+                    </div>
                 </div>
             </div>
         </nav>
